--- a/project3/index.html
+++ b/project3/index.html
@@ -16,8 +16,8 @@
             </div>
 
             <div class="carousel-actions">
-                <button id="carousel-btn-prev" aria-label="Previous slide"><</button>
-                <button id="carousel-btn-next" aria-label="Next slide">></button>
+                <button id="carousel-btn-prev" aria-label="Previous slide"><i class="arrow left"></i></button>
+                <button id="carousel-btn-next" aria-label="Next slide"><i class="arrow right"></i></button>
             </div>
         </div>
         
